--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="col-lg-4 " style="padding-bottom: 1em">
             <div class="div-img-bg">
               <div class="about-img">
-                <img src="photos/jake_dun_laoghaire.jpeg" class="img-responsive" style="border: .2em solid white">
+                <img src="photos/jake_dunlaoghaire.jpeg" class="img-responsive" style="border: .2em solid white">
               </div>
             </div>
           </div>
@@ -636,53 +636,53 @@
                                         </a>
                                       </div>
                                       <div class="col-lg-4 col-md-6 portfolio-thumbnail all dun">
-                                          <a class="popup-img" href="photos\dun_laoghaire\image0 (5).jpeg" target="_blank">
-                                              <img src="photos\dun_laoghaire\image0 (5).jpeg" alt="img" style="width: 600px; height: 300px">
+                                          <a class="popup-img" href="photos\dunlaoghaire\image0 (5).jpeg" target="_blank">
+                                              <img src="photos\dunlaoghaire\image0 (5).jpeg" alt="img" style="width: 600px; height: 300px">
                                           </a>
                                         </div>
                             <div class="col-lg-4 col-md-6 portfolio-thumbnail all dun">
-                                <a class="popup-img" href="photos\dun_laoghaire\image2 (2).jpeg" target="_blank">
-                                    <img src="photos\dun_laoghaire\image2 (2).jpeg" alt="img" style="width: 600px; height: 300px">
+                                <a class="popup-img" href="photos\dunlaoghaire\image2 (2).jpeg" target="_blank">
+                                    <img src="photos\dunlaoghaire\image2 (2).jpeg" alt="img" style="width: 600px; height: 300px">
                                 </a>
                               </div>
                               <div class="col-lg-4 col-md-6 portfolio-thumbnail all dun">
-                                  <a class="popup-img" href="photos\dun_laoghaire\image7.jpeg" target="_blank">
-                                      <img src="photos\dun_laoghaire\image7.jpeg" alt="img" style="width: 600px; height: 300px">
+                                  <a class="popup-img" href="photos\dunlaoghaire\image7.jpeg" target="_blank">
+                                      <img src="photos\dunlaoghaire\image7.jpeg" alt="img" style="width: 600px; height: 300px">
                                   </a>
                                 </div>
                                 <div class="col-lg-4 col-md-6 portfolio-thumbnail all dun">
-                                    <a class="popup-img" href="photos\dun_laoghaire\image5 (1).jpeg" target="_blank">
-                                        <img src="photos\dun_laoghaire\image5 (1).jpeg" alt="img" style="width: 600px; height: 300px">
+                                    <a class="popup-img" href="photos\dunlaoghaire\image5 (1).jpeg" target="_blank">
+                                        <img src="photos\dunlaoghaire\image5 (1).jpeg" alt="img" style="width: 600px; height: 300px">
                                     </a>
                                   </div>
                                   <div class="col-lg-4 col-md-6 portfolio-thumbnail all dun">
-                                      <a class="popup-img" href="photos\dun_laoghaire\image9 (1).jpeg" target="_blank">
-                                          <img src="photos\dun_laoghaire\image9 (1).jpeg" alt="img" style="width: 600px; height: 300px">
+                                      <a class="popup-img" href="photos\dunlaoghaire\image9 (1).jpeg" target="_blank">
+                                          <img src="photos\dunlaoghaire\image9 (1).jpeg" alt="img" style="width: 600px; height: 300px">
                                       </a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 portfolio-thumbnail all dun">
-                                        <a class="popup-img" href="photos\dun_laoghaire\image11 (1).jpeg" target="_blank">
-                                            <img src="photos\dun_laoghaire\image11 (1).jpeg" alt="img" style="width: 600px; height: 300px">
+                                        <a class="popup-img" href="photos\dunlaoghaire\image11 (1).jpeg" target="_blank">
+                                            <img src="photos\dunlaoghaire\image11 (1).jpeg" alt="img" style="width: 600px; height: 300px">
                                         </a>
                                       </div>
                                       <div class="col-lg-4 col-md-6 portfolio-thumbnail all dun">
-                                          <a class="popup-img" href="photos\dun_laoghaire\image13 (1).jpeg" target="_blank">
-                                              <img src="photos\dun_laoghaire\image13 (1).jpeg" alt="img" style="width: 600px; height: 300px">
+                                          <a class="popup-img" href="photos\dunlaoghaire\image13 (1).jpeg" target="_blank">
+                                              <img src="photos\dunlaoghaire\image13 (1).jpeg" alt="img" style="width: 600px; height: 300px">
                                           </a>
                                         </div>
                                         <div class="col-lg-4 col-md-6 portfolio-thumbnail all dun">
-                                            <a class="popup-img" href="photos\dun_laoghaire\image16 (1).jpeg" target="_blank">
-                                                <img src="photos\dun_laoghaire\image16 (1).jpeg" alt="img" style="width: 600px; height: 300px">
+                                            <a class="popup-img" href="photos\dunlaoghaire\image16 (1).jpeg" target="_blank">
+                                                <img src="photos\dunlaoghaire\image16 (1).jpeg" alt="img" style="width: 600px; height: 300px">
                                             </a>
                                           </div>
                                           <div class="col-lg-4 col-md-6 portfolio-thumbnail all dun">
-                                              <a class="popup-img" href="photos\dun_laoghaire\image21.jpeg" target="_blank">
-                                                  <img src="photos\dun_laoghaire\image21.jpeg" alt="img" style="width: 600px; height: 300px">
+                                              <a class="popup-img" href="photos\dunlaoghaire\image21.jpeg" target="_blank">
+                                                  <img src="photos\dunlaoghaire\image21.jpeg" alt="img" style="width: 600px; height: 300px">
                                               </a>
                                             </div>
                                             <div class="col-lg-4 col-md-6 portfolio-thumbnail all dun">
-                                                <a class="popup-img" href="photos\dun_laoghaire\image23.jpeg" target="_blank">
-                                                    <img src="photos\dun_laoghaire\image23.jpeg" alt="img" style="width: 600px; height: 300px">
+                                                <a class="popup-img" href="photos\dunlaoghaire\image23.jpeg" target="_blank">
+                                                    <img src="photos\dunlaoghaire\image23.jpeg" alt="img" style="width: 600px; height: 300px">
                                                 </a>
                                               </div>
 </div>
