Fixed spelling mistake on Jake bio

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="about-descr" style="padding: 2em; border: .1em solid white">
 
               <p class="p-heading" style="font-size: 3em; color: rgb(218, 187, 10); text-align: center; padding-bottom: .75em; border-bottom: .1em solid white"><b>Jake</b></p>
-              <p class="separator" style="text-align: center; font-size:1.5em; color: white">Jake loves coding and enjoys creating websites. <br><br>He is obsessed wih football and watches it everyday. <br><br>Jake wants to live somewhere hot, he wants to move to Spain or Australia.</p>
+              <p class="separator" style="text-align: center; font-size:1.5em; color: white">Jake loves coding and enjoys creating websites. <br><br>He is obsessed with football and watches it everyday. <br><br>Jake wants to live somewhere hot, he wants to move to Spain or Australia.</p>
 
             </div>
 
